# wyrd-pdca

./: .copier-answers.yml  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  pdca.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: act.md  adversary.md  builder.md  code-review.md  planner.md  publisher.md  reviewer.md  signoff.md
.claude/hooks/: builder_guard.py
PCDA/: README.md  quality-cycle.md
PCDA/quality-cycle/: 00-overview.md  01-the-quality-cycle.md  02-cycle-artifacts.md  03-cycle-automation.md  04-validation-tooling.md  05-repository-integration.md  06-quality-cycle-guidelines.md  (+4 more)
docs/: INTEGRATION.md  fork-discipline.md  principles.md
engine/: README.md  cycle-worktree.sh  xtask.sh
process/: act-log.md
scripts/: bootstrap-tools.ps1  bootstrap-tools.sh  install.ps1
templates/: MANUAL-VERIFICATION.md.tpl  SUMMARY.md.tpl  brief.md.tpl  commit-msg.txt.tpl  design-proposal.md.tpl  plan-pointer.md.tpl  pr-description.md.tpl  tracker-comment.md.tpl
tests/: test_act_ledger.py  test_adversary.py  test_brief.py  test_carry_forward.py  test_deps_completed.py  test_difficulty.py  test_difficulty_routing.py  test_do_confine.py  test_driver_slice.py  test_flow_slice.py  test_gate_promotion.py  test_gates_target.py  test_gates_unverifiable.py  test_integrate.py  test_leaf_resilience.py  test_loop_escalation.py  test_merge.py  test_merged.py  test_prod_path_gate.py  test_progress.py  test_publish_slice.py  test_regate.py  test_revalidate.py  test_revert.py  test_sources.py  test_waves.py  test_worktree.py
(+555 files in other folders)
