[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wyrd-pdca-pdca-harness"
version = "0.1.0"
description = "PDCA quality-cycle harness for Wyrd PDCA"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Eduard Ralph", email = "eduard@ralphovi.net" }]
dependencies = []

[project.scripts]
# Exposed as `wyrd-pdca` (not the template default `pdca`) so it does not collide with
# the sibling gramps-testbed pdca install on PATH. Internal docs that say `pdca <cmd>`
# map to `wyrd-pdca <cmd>` here. Both names point at the same CLI entry point.
wyrd-pdca = "pdca_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
